--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 .music-container{
     background-color: #fff;
     border-radius: 15px;
-    box-shadow: 0 20px 20px 0 rgba(252,169,168,0.6);
+    box-shadow: 0 20px 20px 0 rgba(252,169,169,0.6);
     display: flex;
     position: relative;
     padding: 20px 30px;
@@ -30,12 +30,12 @@ body{
     z-index: 10;
 }
 
-.image-container{
+.img-container{
     position: relative;
     width: 110px;
 }
 
-.image-container::after{
+.img-container::after{
     content: '';
     background-color: #fff;
     border-radius: 50%;
@@ -47,7 +47,7 @@ body{
     transform: translate(-50%,50%);
 }
 
-.image-container img{
+.img-container img{
     border-radius: 50%;
     object-fit: cover;
     height: 110px;
@@ -102,8 +102,8 @@ body{
     left:20px;
     width: calc(100%-40px);
     padding: 10px 10px 10px 150px;
-    transform: translateY(0%);
     opacity: 0;
+    transform: translateY(0%);
     transition: transform 0.3s ease-in, opacity 0.3s ease-in;
     z-index: 0;
 }
